# openbrush-template

./: .gitignore  .neoconf.json  Cargo.toml  Makefile.toml  README.md
contracts/contract-name/: .neoconf.json  Cargo.toml  contract.rs  e2e_tests.rs  error.rs  unit_tests.rs
contracts/contract-name/src/: contract.rs  error.rs  lib.rs
impls/: mod.rs
impls/trait_name/: mod.rs  trait_name.rs
project-name/: Cargo.toml
project-name/contracts/contract-name/: Cargo.toml
project-name/contracts/contract-name/src/: contract.rs  error.rs
project-name/impls/: mod.rs
project-name/impls/trait_name/: mod.rs  trait_name.rs
project-name/traits/: errors.rs  trait_name.rs
traits/: errors.rs  mod.rs  trait_name.rs
