[package]
name          = "project-name"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/openbrush-template/project-name"
documentation = "https://github.com/alessandro-baldassarre/openbrush-template/project-name#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
name = "project_name"
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
ink        = { version = "4.0.1", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
scale      = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink/std",
    "openbrush/std",
    "scale/std",
    "scale-info/std",
]

[profile.dev]
codegen-units = 16
