[package]
name          = "contract-name"
version       = "0.1.0"
authors       = ["Alessandro Baldassarre <alessandro.baldassarre.dev@gmail.com>"]
edition       = "2021"
license       = "UNLICENSED"
repository    = "https://github.com/alessandro-baldassarre/openbrush-template/contract-name"
documentation = "https://github.com/alessandro-baldassarre/openbrush-template/contract-name#readme"
keywords      = ["blockchain", "polkadot", "ink"]

[lib]
name = "contract_name"
path = "contract.rs"
crate-type = ["cdylib"]

[dependencies]
ink        = { version = "~4.0.0", default-features = false }
openbrush  = { git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false }
scale      = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.1", default-features = false, features = ["derive"], optional = true }

project-name = { path = "../../", default-features = false }

[dev-dependencies]
ink_e2e = { version = "~4.0.0" } 

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "project-name/std"
]

ink-as-dependency = []
e2e-tests = []
